--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,9 @@
   doi = {10.1101/2020.11.26.400739},
   selected={true},
   abstract = {Higher-order genetic interactions, which have profound implications for understanding the molecular mechanisms of phenotypic variation, remain poorly characterized. Most studies to date have focused on pairwise interactions, as designing high-throughput experimental screenings for the vast combinatorial search space of higher-order molecular interactions is dauntingly challenging. Here, we develop DANGO, a computational method based on a self-attention hypergraph neural network, designed to effectively predict higher-order genetic interaction among groups of genes. As a proof-of-concept, we provide comprehensive predictions for over 400 million trigenic interactions in the yeast S. cerevisiae, significantly expanding the quantitative characterization of such interactions. Our results demonstrate that DANGO accurately predicts trigenic interactions, uncovering both known and novel biological functions related to cell growth. We further incorporate protein embeddings and model uncertainty scoring to enhance the biological relevance and interpretability of the predicted interactions. Moreover, the predicted interactions can serve as powerful genetic markers for growth response under diverse conditions. Together, DANGO enables a more complete map of complex genetic interactions that impinge upon phenotypic diversity.Competing Interest StatementThe authors have declared no competing interest.},
-  elocation-id = {2020.11.26.400739}
+  elocation-id = {2020.11.26.400739},
+  short={bioRxiv},
+  shorttitle={bioRxiv}
 }
 
 
@@ -28,7 +30,7 @@ author = {Bafna, Mihir and Keerthipati, Vikranth and Kanaparthi, Subhash and Zha
 title= {DiffRNAFold: Generating RNA Tertiary Structures with Latent Space Diffusion},
 booktitle   = {NeurIPS Workshop on Machine Learning for Structural Biology},
 shorttitle={NeurIPS MLSB},
-short={NeurIPS MLSB},
+short={MLSB},
 Month={Dec},
 year= {2023},
 publisher = {NeurIPS MLSB},
@@ -99,7 +101,7 @@ numpages = {8},
 keywords = {neural networks, viral detection, natural language processing, open-set classification},
 location = {Northbrook, Illinois},
 series = {BCB '22},
-selected= {true},
+selected= {false},
 pdf={https://dl.acm.org/doi/pdf/10.1145/3535508.3545551},
 code={https://github.com/UCRajkumar/DeepViFi},
 bibtex_show={true},
@@ -117,7 +119,8 @@ whole slide imaging},
   filing={Provisional patent. PCT/US2021/022308},
   month={March},
   notes= {filed March 15, 2021},
-  selected={true},
-  abs={}
+  selected={false},
+  abs={},
+  short={Patent}
 }
 
