--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,21 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{jing2025generating,
+  title={Generating functional and multistate proteins with a multimodal diffusion transformer},
+  author={Jing, Bowen and Sappington, Anna and Bafna, Mihir and Shah, Ravi and Tang, Adrina and Krishna, Rohith and Klivans, Adam and Diaz, Daniel J and Berger, Bonnie},
+  journal={bioRxiv},
+  year={2025},
+  month={Sep},
+  publisher={Cold Spring Harbor Laboratory},
+  abstract={Generating proteins with the full diversity and complexity of functions found in nature is a grand challenge in protein design. Here, we present ProDiT, a multimodal diffusion model that unifies sequence and structure modeling paradigms to enable the design of functional proteins at scale. Trained on sequences, 3D structures, and annotations for 214M proteins across the evolutionary landscape, ProDiT generates diverse, novel proteins that preserve known active and binding site motifs and can be successfully conditioned on a wide range of molecular functions, spanning 465 Gene Ontology terms. We introduce a diffusion sampling protocol to design proteins with multiple functional states, and demonstrate this protocol by scaffolding active sites from enzymes such as carbonic anhydrase and lysozyme to be allosterically deactivated by a calcium effector. Our results showcase ProDiT9s unique capacity to satisfy design specifications inaccessible to existing generative models, thereby expanding the protein design toolkit.},
+  bibtex_show={true},
+  selected={true},
+  short={biorxiv},
+  shorttitle={biorxiv},
+  biorxiv={10.1101/2025.09.03.672144v2},
+}
+
 @article{bafna2025learningresiduelevelprotein,
       title={Learning residue level protein dynamics with multiscale Gaussians}, 
       author={Mihir Bafna and Bowen Jing and Bonnie Berger},
